y.output
Terminals unused in grammar

   error_
   chan_
   const_
   defer_
   fallthrough_
   go_
   goto_
   import_
   interface_
   map_
   range_
   select_
   arrow_
   etc_


Grammar

    0 $accept: go_prog $end

    1 go_prog: pckg_decl ';' top_decl_list

    2 pckg_decl: package_ id_

    3 top_decl_list: %empty
    4              | top_decl_list top_decl

    5 top_decl: decl
    6         | func_decl

    7 decl: var_decl
    8     | type_decl

    9 func_decl: func_ func_name function
   10          | func_ func_name signature

   11 func_name: id_

   12 function: signature func_body

   13 func_body: block

   14 block: block_tmp ';'

   15 block_tmp: '{' stmt_list '}'

   16 signature: params
   17          | params result

   18 result: type

   19 params: '(' ')'
   20       | '(' params_list ')'

   21 params_list: params_list ',' params_decl
   22            | params_decl

   23 params_decl: id_list type

   24 var_decl: var_ var_spec ';'
   25         | var_ '(' var_spec_list ')' ';'

   26 type_decl: type_ type_spec ';'
   27          | type_ '(' type_spec_list ')' ';'

   28 type_spec_list: %empty
   29               | type_spec_list type_spec ';'

   30 type_spec: id_ type

   31 var_spec_list: %empty
   32              | var_spec_list var_spec ';'

   33 var_spec: id_list '=' expr_list
   34         | id_list type '=' expr_list
   35         | id_list type

   36 id_list: id_
   37        | id_list ',' id_

   38 type: basic_type
   39     | '[' ']' type
   40     | struct_ '{' field_decl_list '}'
   41     | '[' int_lit_ ']' type
   42     | id_

   43 basic_type: int_
   44           | float_
   45           | string_
   46           | rune_
   47           | bool_

   48 field_decl_list: field_decl_list field_decl
   49                | field_decl_list field_decl ';'
   50                | %empty

   51 field_decl: id_list type

   52 stmt_list: %empty
   53          | stmt_list stmt

   54 stmt: decl
   55     | block
   56     | print_stmt
   57     | println_stmt
   58     | return_stmt
   59     | if_stmt
   60     | simple_stmt
   61     | switch_stmt
   62     | for_stmt
   63     | break_stmt
   64     | cont_stmt

   65 simple_stmt: simple_stmt_v ';'

   66 simple_stmt_v: %empty
   67              | expr_stmt
   68              | inc_stmt
   69              | dec_stmt
   70              | assign_stmt
   71              | short_decl

   72 assign_stmt: expr_list assign_op expr_list

   73 short_decl: expr_list decla_ expr_list

   74 inc_stmt: expr incre_

   75 dec_stmt: expr decre_

   76 print_stmt: print_ '(' expr_list ')' ';'
   77           | print_ '(' ')' ';'

   78 println_stmt: println_ '(' expr_list ')' ';'
   79             | println_ '(' ')' ';'

   80 return_stmt: return_ expr ';'
   81            | return_ ';'

   82 if_stmt: if_ if_cond block
   83        | if_ if_cond block else_ else_block

   84 switch_stmt: switch_ switch_cond '{' case_clause_list '}'

   85 for_stmt: for_ for_clause block

   86 for_clause: condition
   87           | for_stmt_clause

   88 condition: %empty
   89          | expr

   90 for_stmt_clause: simple_stmt_v ';' condition ';' simple_stmt_v

   91 switch_cond: simple_stmt ';' expr
   92            | simple_stmt ';'
   93            | expr
   94            | %empty

   95 case_clause_list: %empty
   96                 | case_clause_list case_clause

   97 case_clause: switch_case ':' stmt_list

   98 switch_case: case_ expr_list
   99            | default_

  100 if_cond: expr
  101        | simple_stmt expr

  102 else_block: block
  103           | if_stmt

  104 break_stmt: break_ ';'

  105 cont_stmt: continue_ ';'

  106 assign_op: '='
  107          | add_eq_
  108          | minus_eq_
  109          | mult_eq_
  110          | div_eq_
  111          | mod_eq_
  112          | amp_eq_
  113          | vb_eq_
  114          | caret_eq_
  115          | ls_eq_
  116          | rs_eq_
  117          | unknown_eq_

  118 expr_stmt: expr

  119 expr_list: expr
  120          | expr_list ',' expr

  121 operand: '(' expr ')'
  122        | operand_name
  123        | literal

  124 operand_name: id_

  125 literal: int_lit_
  126        | float_lit_
  127        | string_lit_
  128        | rune_lit_

  129 expr: primary_expr
  130     | expr '*' expr
  131     | expr '/' expr
  132     | expr '%' expr
  133     | expr '&' expr
  134     | expr unknown_ expr
  135     | expr ls_ expr
  136     | expr rs_ expr
  137     | expr '|' expr
  138     | expr '^' expr
  139     | expr '-' expr
  140     | expr '+' expr
  141     | expr equality_ expr
  142     | expr '<' expr
  143     | expr '>' expr
  144     | expr lteq_ expr
  145     | expr gteq_ expr
  146     | expr not_eq_ expr
  147     | expr and_ expr
  148     | expr or_ expr
  149     | append
  150     | unary_op expr

  151 unary_op: '+'
  152         | '-'
  153         | '^'
  154         | '!'

  155 func_call: primary_expr '(' expr_list ')'
  156          | primary_expr '(' ')'

  157 append: append_ '(' id_ ',' expr_list ')'

  158 primary_expr: operand
  159             | func_call
  160             | type_cast
  161             | primary_expr selector
  162             | primary_expr index
  163             | primary_expr slice

  164 selector: '.' id_

  165 type_cast: basic_type '(' expr ')'

  166 index: '[' expr ']'

  167 slice: '[' expr ':' expr ']'
  168      | '[' expr ':' ']'
  169      | '[' ':' expr ']'
  170      | '[' ':' ']'
  171      | '[' expr ':' expr ':' expr ']'
  172      | '[' ':' expr ':' expr ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 154
'%' (37) 132
'&' (38) 133
'(' (40) 19 20 25 27 76 77 78 79 121 155 156 157 165
')' (41) 19 20 25 27 76 77 78 79 121 155 156 157 165
'*' (42) 130
'+' (43) 140 151
',' (44) 21 37 120 157
'-' (45) 139 152
'.' (46) 164
'/' (47) 131
':' (58) 97 167 168 169 170 171 172
';' (59) 1 14 24 25 26 27 29 32 49 65 76 77 78 79 80 81 90 91 92 104
    105
'<' (60) 142
'=' (61) 33 34 106
'>' (62) 143
'[' (91) 39 41 166 167 168 169 170 171 172
']' (93) 39 41 166 167 168 169 170 171 172
'^' (94) 138 153
'{' (123) 15 40 84
'|' (124) 137
'}' (125) 15 40 84
error (256)
error_ (258)
break_ (259) 104
case_ (260) 98
chan_ (261)
const_ (262)
continue_ (263) 105
default_ (264) 99
defer_ (265)
else_ (266) 83
fallthrough_ (267)
for_ (268) 85
func_ (269) 9 10
go_ (270)
goto_ (271)
if_ (272) 82 83
import_ (273)
interface_ (274)
map_ (275)
package_ (276) 2
range_ (277)
return_ (278) 80 81
select_ (279)
struct_ (280) 40
switch_ (281) 84
type_ (282) 26 27
var_ (283) 24 25
int_ (284) 43
float_ (285) 44
bool_ (286) 47
rune_ (287) 46
string_ (288) 45
print_ (289) 76 77
println_ (290) 78 79
append_ (291) 157
ls_ (292) 135
rs_ (293) 136
unknown_ (294) 134
add_eq_ (295) 107
minus_eq_ (296) 108
mult_eq_ (297) 109
div_eq_ (298) 110
mod_eq_ (299) 111
amp_eq_ (300) 112
vb_eq_ (301) 113
caret_eq_ (302) 114
ls_eq_ (303) 115
rs_eq_ (304) 116
unknown_eq_ (305) 117
and_ (306) 147
or_ (307) 148
arrow_ (308)
incre_ (309) 74
decre_ (310) 75
equality_ (311) 141
not_eq_ (312) 146
lteq_ (313) 144
gteq_ (314) 145
decla_ (315) 73
etc_ (316)
int_lit_ (317) 41 125
float_lit_ (318) 126
string_lit_ (319) 127
rune_lit_ (320) 128
id_ (321) 2 11 30 36 37 42 124 157 164
unary (322)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
go_prog (91)
    on left: 1, on right: 0
pckg_decl (92)
    on left: 2, on right: 1
top_decl_list (93)
    on left: 3 4, on right: 1 4
top_decl (94)
    on left: 5 6, on right: 4
decl (95)
    on left: 7 8, on right: 5 54
func_decl (96)
    on left: 9 10, on right: 6
func_name (97)
    on left: 11, on right: 9 10
function (98)
    on left: 12, on right: 9
func_body (99)
    on left: 13, on right: 12
block (100)
    on left: 14, on right: 13 55 82 83 85 102
block_tmp (101)
    on left: 15, on right: 14
signature (102)
    on left: 16 17, on right: 10 12
result (103)
    on left: 18, on right: 17
params (104)
    on left: 19 20, on right: 16 17
params_list (105)
    on left: 21 22, on right: 20 21
params_decl (106)
    on left: 23, on right: 21 22
var_decl (107)
    on left: 24 25, on right: 7
type_decl (108)
    on left: 26 27, on right: 8
type_spec_list (109)
    on left: 28 29, on right: 27 29
type_spec (110)
    on left: 30, on right: 26 29
var_spec_list (111)
    on left: 31 32, on right: 25 32
var_spec (112)
    on left: 33 34 35, on right: 24 32
id_list (113)
    on left: 36 37, on right: 23 33 34 35 37 51
type (114)
    on left: 38 39 40 41 42, on right: 18 23 30 34 35 39 41 51
basic_type (115)
    on left: 43 44 45 46 47, on right: 38 165
field_decl_list (116)
    on left: 48 49 50, on right: 40 48 49
field_decl (117)
    on left: 51, on right: 48 49
stmt_list (118)
    on left: 52 53, on right: 15 53 97
stmt (119)
    on left: 54 55 56 57 58 59 60 61 62 63 64, on right: 53
simple_stmt (120)
    on left: 65, on right: 60 91 92 101
simple_stmt_v (121)
    on left: 66 67 68 69 70 71, on right: 65 90
assign_stmt (122)
    on left: 72, on right: 70
short_decl (123)
    on left: 73, on right: 71
inc_stmt (124)
    on left: 74, on right: 68
dec_stmt (125)
    on left: 75, on right: 69
print_stmt (126)
    on left: 76 77, on right: 56
println_stmt (127)
    on left: 78 79, on right: 57
return_stmt (128)
    on left: 80 81, on right: 58
if_stmt (129)
    on left: 82 83, on right: 59 103
switch_stmt (130)
    on left: 84, on right: 61
for_stmt (131)
    on left: 85, on right: 62
for_clause (132)
    on left: 86 87, on right: 85
condition (133)
    on left: 88 89, on right: 86 90
for_stmt_clause (134)
    on left: 90, on right: 87
switch_cond (135)
    on left: 91 92 93 94, on right: 84
case_clause_list (136)
    on left: 95 96, on right: 84 96
case_clause (137)
    on left: 97, on right: 96
switch_case (138)
    on left: 98 99, on right: 97
if_cond (139)
    on left: 100 101, on right: 82 83
else_block (140)
    on left: 102 103, on right: 83
break_stmt (141)
    on left: 104, on right: 63
cont_stmt (142)
    on left: 105, on right: 64
assign_op (143)
    on left: 106 107 108 109 110 111 112 113 114 115 116 117, on right:
    72
expr_stmt (144)
    on left: 118, on right: 67
expr_list (145)
    on left: 119 120, on right: 33 34 72 73 76 78 98 120 155 157
operand (146)
    on left: 121 122 123, on right: 158
operand_name (147)
    on left: 124, on right: 122
literal (148)
    on left: 125 126 127 128, on right: 123
expr (149)
    on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142
    143 144 145 146 147 148 149 150, on right: 74 75 80 89 91 93 100
    101 118 119 120 121 130 131 132 133 134 135 136 137 138 139 140
    141 142 143 144 145 146 147 148 150 165 166 167 168 169 171 172
unary_op (150)
    on left: 151 152 153 154, on right: 150
func_call (151)
    on left: 155 156, on right: 159
append (152)
    on left: 157, on right: 149
primary_expr (153)
    on left: 158 159 160 161 162 163, on right: 129 155 156 161 162
    163
selector (154)
    on left: 164, on right: 161
type_cast (155)
    on left: 165, on right: 160
index (156)
    on left: 166, on right: 162
slice (157)
    on left: 167 168 169 170 171 172, on right: 163


State 0

    0 $accept: . go_prog $end

    package_  shift, and go to state 1

    go_prog    go to state 2
    pckg_decl  go to state 3


State 1

    2 pckg_decl: package_ . id_

    id_  shift, and go to state 4


State 2

    0 $accept: go_prog . $end

    $end  shift, and go to state 5


State 3

    1 go_prog: pckg_decl . ';' top_decl_list

    ';'  shift, and go to state 6


State 4

    2 pckg_decl: package_ id_ .

    $default  reduce using rule 2 (pckg_decl)


State 5

    0 $accept: go_prog $end .

    $default  accept


State 6

    1 go_prog: pckg_decl ';' . top_decl_list

    $default  reduce using rule 3 (top_decl_list)

    top_decl_list  go to state 7


State 7

    1 go_prog: pckg_decl ';' top_decl_list .
    4 top_decl_list: top_decl_list . top_decl

    func_  shift, and go to state 8
    type_  shift, and go to state 9
    var_   shift, and go to state 10

    $default  reduce using rule 1 (go_prog)

    top_decl   go to state 11
    decl       go to state 12
    func_decl  go to state 13
    var_decl   go to state 14
    type_decl  go to state 15


State 8

    9 func_decl: func_ . func_name function
   10          | func_ . func_name signature

    id_  shift, and go to state 16

    func_name  go to state 17


State 9

   26 type_decl: type_ . type_spec ';'
   27          | type_ . '(' type_spec_list ')' ';'

    '('  shift, and go to state 18
    id_  shift, and go to state 19

    type_spec  go to state 20


State 10

   24 var_decl: var_ . var_spec ';'
   25         | var_ . '(' var_spec_list ')' ';'

    '('  shift, and go to state 21
    id_  shift, and go to state 22

    var_spec  go to state 23
    id_list   go to state 24


State 11

    4 top_decl_list: top_decl_list top_decl .

    $default  reduce using rule 4 (top_decl_list)


State 12

    5 top_decl: decl .

    $default  reduce using rule 5 (top_decl)


State 13

    6 top_decl: func_decl .

    $default  reduce using rule 6 (top_decl)


State 14

    7 decl: var_decl .

    $default  reduce using rule 7 (decl)


State 15

    8 decl: type_decl .

    $default  reduce using rule 8 (decl)


State 16

   11 func_name: id_ .

    $default  reduce using rule 11 (func_name)


State 17

    9 func_decl: func_ func_name . function
   10          | func_ func_name . signature

    '('  shift, and go to state 25

    function   go to state 26
    signature  go to state 27
    params     go to state 28


State 18

   27 type_decl: type_ '(' . type_spec_list ')' ';'

    $default  reduce using rule 28 (type_spec_list)

    type_spec_list  go to state 29


State 19

   30 type_spec: id_ . type

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '['      shift, and go to state 36
    id_      shift, and go to state 37

    type        go to state 38
    basic_type  go to state 39


State 20

   26 type_decl: type_ type_spec . ';'

    ';'  shift, and go to state 40


State 21

   25 var_decl: var_ '(' . var_spec_list ')' ';'

    $default  reduce using rule 31 (var_spec_list)

    var_spec_list  go to state 41


State 22

   36 id_list: id_ .

    $default  reduce using rule 36 (id_list)


State 23

   24 var_decl: var_ var_spec . ';'

    ';'  shift, and go to state 42


State 24

   33 var_spec: id_list . '=' expr_list
   34         | id_list . type '=' expr_list
   35         | id_list . type
   37 id_list: id_list . ',' id_

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '='      shift, and go to state 43
    '['      shift, and go to state 36
    ','      shift, and go to state 44
    id_      shift, and go to state 37

    type        go to state 45
    basic_type  go to state 39


State 25

   19 params: '(' . ')'
   20       | '(' . params_list ')'

    ')'  shift, and go to state 46
    id_  shift, and go to state 22

    params_list  go to state 47
    params_decl  go to state 48
    id_list      go to state 49


State 26

    9 func_decl: func_ func_name function .

    $default  reduce using rule 9 (func_decl)


State 27

   10 func_decl: func_ func_name signature .
   12 function: signature . func_body

    '{'  shift, and go to state 50

    $default  reduce using rule 10 (func_decl)

    func_body  go to state 51
    block      go to state 52
    block_tmp  go to state 53


State 28

   16 signature: params .
   17          | params . result

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '['      shift, and go to state 36
    id_      shift, and go to state 37

    $default  reduce using rule 16 (signature)

    result      go to state 54
    type        go to state 55
    basic_type  go to state 39


State 29

   27 type_decl: type_ '(' type_spec_list . ')' ';'
   29 type_spec_list: type_spec_list . type_spec ';'

    ')'  shift, and go to state 56
    id_  shift, and go to state 19

    type_spec  go to state 57


State 30

   40 type: struct_ . '{' field_decl_list '}'

    '{'  shift, and go to state 58


State 31

   43 basic_type: int_ .

    $default  reduce using rule 43 (basic_type)


State 32

   44 basic_type: float_ .

    $default  reduce using rule 44 (basic_type)


State 33

   47 basic_type: bool_ .

    $default  reduce using rule 47 (basic_type)


State 34

   46 basic_type: rune_ .

    $default  reduce using rule 46 (basic_type)


State 35

   45 basic_type: string_ .

    $default  reduce using rule 45 (basic_type)


State 36

   39 type: '[' . ']' type
   41     | '[' . int_lit_ ']' type

    ']'       shift, and go to state 59
    int_lit_  shift, and go to state 60


State 37

   42 type: id_ .

    $default  reduce using rule 42 (type)


State 38

   30 type_spec: id_ type .

    $default  reduce using rule 30 (type_spec)


State 39

   38 type: basic_type .

    $default  reduce using rule 38 (type)


State 40

   26 type_decl: type_ type_spec ';' .

    $default  reduce using rule 26 (type_decl)


State 41

   25 var_decl: var_ '(' var_spec_list . ')' ';'
   32 var_spec_list: var_spec_list . var_spec ';'

    ')'  shift, and go to state 61
    id_  shift, and go to state 22

    var_spec  go to state 62
    id_list   go to state 24


State 42

   24 var_decl: var_ var_spec ';' .

    $default  reduce using rule 24 (var_decl)


State 43

   33 var_spec: id_list '=' . expr_list

    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73

    basic_type    go to state 74
    expr_list     go to state 75
    operand       go to state 76
    operand_name  go to state 77
    literal       go to state 78
    expr          go to state 79
    unary_op      go to state 80
    func_call     go to state 81
    append        go to state 82
    primary_expr  go to state 83
    type_cast     go to state 84


State 44

   37 id_list: id_list ',' . id_

    id_  shift, and go to state 85


State 45

   34 var_spec: id_list type . '=' expr_list
   35         | id_list type .

    '='  shift, and go to state 86

    $default  reduce using rule 35 (var_spec)


State 46

   19 params: '(' ')' .

    $default  reduce using rule 19 (params)


State 47

   20 params: '(' params_list . ')'
   21 params_list: params_list . ',' params_decl

    ')'  shift, and go to state 87
    ','  shift, and go to state 88


State 48

   22 params_list: params_decl .

    $default  reduce using rule 22 (params_list)


State 49

   23 params_decl: id_list . type
   37 id_list: id_list . ',' id_

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '['      shift, and go to state 36
    ','      shift, and go to state 44
    id_      shift, and go to state 37

    type        go to state 89
    basic_type  go to state 39


State 50

   15 block_tmp: '{' . stmt_list '}'

    $default  reduce using rule 52 (stmt_list)

    stmt_list  go to state 90


State 51

   12 function: signature func_body .

    $default  reduce using rule 12 (function)


State 52

   13 func_body: block .

    $default  reduce using rule 13 (func_body)


State 53

   14 block: block_tmp . ';'

    ';'  shift, and go to state 91


State 54

   17 signature: params result .

    $default  reduce using rule 17 (signature)


State 55

   18 result: type .

    $default  reduce using rule 18 (result)


State 56

   27 type_decl: type_ '(' type_spec_list ')' . ';'

    ';'  shift, and go to state 92


State 57

   29 type_spec_list: type_spec_list type_spec . ';'

    ';'  shift, and go to state 93


State 58

   40 type: struct_ '{' . field_decl_list '}'

    $default  reduce using rule 50 (field_decl_list)

    field_decl_list  go to state 94


State 59

   39 type: '[' ']' . type

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '['      shift, and go to state 36
    id_      shift, and go to state 37

    type        go to state 95
    basic_type  go to state 39


State 60

   41 type: '[' int_lit_ . ']' type

    ']'  shift, and go to state 96


State 61

   25 var_decl: var_ '(' var_spec_list ')' . ';'

    ';'  shift, and go to state 97


State 62

   32 var_spec_list: var_spec_list var_spec . ';'

    ';'  shift, and go to state 98


State 63

  157 append: append_ . '(' id_ ',' expr_list ')'

    '('  shift, and go to state 99


State 64

  151 unary_op: '+' .

    $default  reduce using rule 151 (unary_op)


State 65

  152 unary_op: '-' .

    $default  reduce using rule 152 (unary_op)


State 66

  153 unary_op: '^' .

    $default  reduce using rule 153 (unary_op)


State 67

  154 unary_op: '!' .

    $default  reduce using rule 154 (unary_op)


State 68

  121 operand: '(' . expr ')'

    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73

    basic_type    go to state 74
    operand       go to state 76
    operand_name  go to state 77
    literal       go to state 78
    expr          go to state 100
    unary_op      go to state 80
    func_call     go to state 81
    append        go to state 82
    primary_expr  go to state 83
    type_cast     go to state 84


State 69

  125 literal: int_lit_ .

    $default  reduce using rule 125 (literal)


State 70

  126 literal: float_lit_ .

    $default  reduce using rule 126 (literal)


State 71

  127 literal: string_lit_ .

    $default  reduce using rule 127 (literal)


State 72

  128 literal: rune_lit_ .

    $default  reduce using rule 128 (literal)


State 73

  124 operand_name: id_ .

    $default  reduce using rule 124 (operand_name)


State 74

  165 type_cast: basic_type . '(' expr ')'

    '('  shift, and go to state 101


State 75

   33 var_spec: id_list '=' expr_list .
  120 expr_list: expr_list . ',' expr

    ','  shift, and go to state 102

    $default  reduce using rule 33 (var_spec)


State 76

  158 primary_expr: operand .

    $default  reduce using rule 158 (primary_expr)


State 77

  122 operand: operand_name .

    $default  reduce using rule 122 (operand)


State 78

  123 operand: literal .

    $default  reduce using rule 123 (operand)


State 79

  119 expr_list: expr .
  130 expr: expr . '*' expr
  131     | expr . '/' expr
  132     | expr . '%' expr
  133     | expr . '&' expr
  134     | expr . unknown_ expr
  135     | expr . ls_ expr
  136     | expr . rs_ expr
  137     | expr . '|' expr
  138     | expr . '^' expr
  139     | expr . '-' expr
  140     | expr . '+' expr
  141     | expr . equality_ expr
  142     | expr . '<' expr
  143     | expr . '>' expr
  144     | expr . lteq_ expr
  145     | expr . gteq_ expr
  146     | expr . not_eq_ expr
  147     | expr . and_ expr
  148     | expr . or_ expr

    '+'        shift, and go to state 103
    '-'        shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    '%'        shift, and go to state 107
    '&'        shift, and go to state 108
    '^'        shift, and go to state 109
    ls_        shift, and go to state 110
    rs_        shift, and go to state 111
    unknown_   shift, and go to state 112
    and_       shift, and go to state 113
    or_        shift, and go to state 114
    equality_  shift, and go to state 115
    '<'        shift, and go to state 116
    '>'        shift, and go to state 117
    not_eq_    shift, and go to state 118
    lteq_      shift, and go to state 119
    gteq_      shift, and go to state 120
    '|'        shift, and go to state 121

    $default  reduce using rule 119 (expr_list)


State 80

  150 expr: unary_op . expr

    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73

    basic_type    go to state 74
    operand       go to state 76
    operand_name  go to state 77
    literal       go to state 78
    expr          go to state 122
    unary_op      go to state 80
    func_call     go to state 81
    append        go to state 82
    primary_expr  go to state 83
    type_cast     go to state 84


State 81

  159 primary_expr: func_call .

    $default  reduce using rule 159 (primary_expr)


State 82

  149 expr: append .

    $default  reduce using rule 149 (expr)


State 83

  129 expr: primary_expr .
  155 func_call: primary_expr . '(' expr_list ')'
  156          | primary_expr . '(' ')'
  161 primary_expr: primary_expr . selector
  162             | primary_expr . index
  163             | primary_expr . slice

    '['  shift, and go to state 123
    '('  shift, and go to state 124
    '.'  shift, and go to state 125

    $default  reduce using rule 129 (expr)

    selector  go to state 126
    index     go to state 127
    slice     go to state 128


State 84

  160 primary_expr: type_cast .

    $default  reduce using rule 160 (primary_expr)


State 85

   37 id_list: id_list ',' id_ .

    $default  reduce using rule 37 (id_list)


State 86

   34 var_spec: id_list type '=' . expr_list

    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73

    basic_type    go to state 74
    expr_list     go to state 129
    operand       go to state 76
    operand_name  go to state 77
    literal       go to state 78
    expr          go to state 79
    unary_op      go to state 80
    func_call     go to state 81
    append        go to state 82
    primary_expr  go to state 83
    type_cast     go to state 84


State 87

   20 params: '(' params_list ')' .

    $default  reduce using rule 20 (params)


State 88

   21 params_list: params_list ',' . params_decl

    id_  shift, and go to state 22

    params_decl  go to state 130
    id_list      go to state 49


State 89

   23 params_decl: id_list type .

    $default  reduce using rule 23 (params_decl)


State 90

   15 block_tmp: '{' stmt_list . '}'
   53 stmt_list: stmt_list . stmt

    break_       shift, and go to state 131
    continue_    shift, and go to state 132
    for_         shift, and go to state 133
    if_          shift, and go to state 134
    return_      shift, and go to state 135
    switch_      shift, and go to state 136
    type_        shift, and go to state 9
    var_         shift, and go to state 10
    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    print_       shift, and go to state 137
    println_     shift, and go to state 138
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '}'          shift, and go to state 139
    '{'          shift, and go to state 50
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73

    $default  reduce using rule 66 (simple_stmt_v)

    decl           go to state 140
    block          go to state 141
    block_tmp      go to state 53
    var_decl       go to state 14
    type_decl      go to state 15
    basic_type     go to state 74
    stmt           go to state 142
    simple_stmt    go to state 143
    simple_stmt_v  go to state 144
    assign_stmt    go to state 145
    short_decl     go to state 146
    inc_stmt       go to state 147
    dec_stmt       go to state 148
    print_stmt     go to state 149
    println_stmt   go to state 150
    return_stmt    go to state 151
    if_stmt        go to state 152
    switch_stmt    go to state 153
    for_stmt       go to state 154
    break_stmt     go to state 155
    cont_stmt      go to state 156
    expr_stmt      go to state 157
    expr_list      go to state 158
    operand        go to state 76
    operand_name   go to state 77
    literal        go to state 78
    expr           go to state 159
    unary_op       go to state 80
    func_call      go to state 81
    append         go to state 82
    primary_expr   go to state 83
    type_cast      go to state 84


State 91

   14 block: block_tmp ';' .

    $default  reduce using rule 14 (block)


State 92

   27 type_decl: type_ '(' type_spec_list ')' ';' .

    $default  reduce using rule 27 (type_decl)


State 93

   29 type_spec_list: type_spec_list type_spec ';' .

    $default  reduce using rule 29 (type_spec_list)


State 94

   40 type: struct_ '{' field_decl_list . '}'
   48 field_decl_list: field_decl_list . field_decl
   49                | field_decl_list . field_decl ';'

    '}'  shift, and go to state 160
    id_  shift, and go to state 22

    id_list     go to state 161
    field_decl  go to state 162


State 95

   39 type: '[' ']' type .

    $default  reduce using rule 39 (type)


State 96

   41 type: '[' int_lit_ ']' . type

    struct_  shift, and go to state 30
    int_     shift, and go to state 31
    float_   shift, and go to state 32
    bool_    shift, and go to state 33
    rune_    shift, and go to state 34
    string_  shift, and go to state 35
    '['      shift, and go to state 36
    id_      shift, and go to state 37

    type        go to state 163
    basic_type  go to state 39


State 97

   25 var_decl: var_ '(' var_spec_list ')' ';' .

    $default  reduce using rule 25 (var_decl)


State 98

   32 var_spec_list: var_spec_list var_spec ';' .

    $default  reduce using rule 32 (var_spec_list)


State 99

  157 append: append_ '(' . id_ ',' expr_list ')'

    id_  shift, and go to state 164


State 100

  121 operand: '(' expr . ')'
  130 expr: expr . '*' expr
  131     | expr . '/' expr
  132     | expr . '%' expr
  133     | expr . '&' expr
  134     | expr . unknown_ expr
  135     | expr . ls_ expr
  136     | expr . rs_ expr
  137     | expr . '|' expr
  138     | expr . '^' expr
  139     | expr . '-' expr
  140     | expr . '+' expr
  141     | expr . equality_ expr
  142     | expr . '<' expr
  143     | expr . '>' expr
  144     | expr . lteq_ expr
  145     | expr . gteq_ expr
  146     | expr . not_eq_ expr
  147     | expr . and_ expr
  148     | expr . or_ expr

    '+'        shift, and go to state 103
    '-'        shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106
    '%'        shift, and go to state 107
    '&'        shift, and go to state 108
    '^'        shift, and go to state 109
    ls_        shift, and go to state 110
    rs_        shift, and go to state 111
    unknown_   shift, and go to state 112
    and_       shift, and go to state 113
    or_        shift, and go to state 114
    equality_  shift, and go to state 115
    '<'        shift, and go to state 116
    '>'        shift, and go to state 117
    not_eq_    shift, and go to state 118
    lteq_      shift, and go to state 119
    gteq_      shift, and go to state 120
    ')'        shift, and go to state 165
    '|'        shift, and go to state 121


State 101

  165 type_cast: basic_type '(' . expr ')'

    int_         shift, and go to state 31
    float_       shift, and go to state 32
    bool_        shift, and go to state 33
    rune_        shift, and go to state 34
    string_      shift, and go to state 35
    append_      shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '^'          shift, and go to state 66
    '!'          shift, and go to state 67
    '('          shift, and go to state 68
    int_lit_     shift, and go to state 69
    float_lit_   shift, and go to state 70
    string_lit_  shift, and go to state 71
    rune_lit_    shift, and go to state 72
    id_          shift, and go to state 73
